--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".signup">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="200dip"
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toBottomOf="@+id/titleText"
         />
     <EditText
-        android:id="@+id/passwordLoginEditText"
+        android:id="@+id/passwordSignUpEditText"
         android:layout_width="match_parent"
         android:layout_height="75dp"
         android:gravity="center"
@@ -46,26 +46,14 @@
         app:layout_constraintTop_toBottomOf="@+id/userNameEditText"
         />
     <Button
-        android:id="@+id/loginButton"
+        android:id="@+id/signupButton"
         android:layout_width="match_parent"
         android:layout_height="105dp"
         android:layout_margin="16dp"
-        android:text="@string/login"
+        android:text="@string/submit"
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordLoginEditText"
+        app:layout_constraintTop_toBottomOf="@+id/passwordSignUpEditText"
         />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="105dp"
-        android:id="@+id/signupButton"
-        android:text="@string/sign_up"
-        android:textSize="32sp"
-        app:layout_constraintTop_toBottomOf="@id/loginButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="16dp"/>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
