--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,13 +5,14 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUpActivity">
+    tools:context=".SettingsActivity">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="200dip"
-        android:id="@+id/titleText"
+        android:id="@+id/settingsTitle"
         android:textSize="42sp"
-        android:text="@string/welcome_to_tamagotchi"
+        android:text="@string/edit_pet_settings"
         android:layout_margin="16dip"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,40 +21,51 @@
         android:layout_marginBottom="30dip"
         />
     <EditText
-        android:id="@+id/userNameEditText"
+        android:id="@+id/petnameSetting"
         android:layout_width="match_parent"
         android:layout_height="85dp"
         android:gravity="center"
         android:textSize="24sp"
-        android:autofillHints="Please Enter Username"
         android:inputType="text"
-        android:hint="@string/enter_username"
+        android:hint="@string/enter_pet_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleText"
+        app:layout_constraintTop_toBottomOf="@+id/settingsTitle"
         />
     <EditText
-        android:id="@+id/passwordSignUpEditText"
+        android:id="@+id/pettypeSetting"
         android:layout_width="match_parent"
-        android:layout_height="75dp"
+        android:layout_height="85dp"
         android:gravity="center"
-        android:textSize="16sp"
-        android:autofillHints="Please Enter password"
-        android:inputType="textPassword"
-        android:hint="@string/enter_password"
+        android:textSize="24sp"
+        android:inputType="text"
+        android:hint="@string/enter_pet_type"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userNameEditText"
+        app:layout_constraintTop_toBottomOf="@+id/petnameSetting"
+        />
+    <EditText
+        android:id="@+id/petcolorSetting"
+        android:layout_width="match_parent"
+        android:layout_height="85dp"
+        android:gravity="center"
+        android:textSize="24sp"
+        android:inputType="text"
+        android:hint="@string/enter_pet_color"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pettypeSetting"
         />
     <Button
-        android:id="@+id/signupButton"
+        android:id="@+id/settingButton"
         android:layout_width="match_parent"
         android:layout_height="105dp"
         android:layout_margin="16dp"
-        android:text="@string/submit"
+        android:text="@string/save_settings"
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordSignUpEditText"
+        app:layout_constraintTop_toBottomOf="@+id/petcolorSetting"
         />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
