--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,64 +8,68 @@
     tools:context=".SettingsActivity">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="200dip"
         android:id="@+id/settingsTitle"
-        android:textSize="42sp"
-        android:text="@string/edit_pet_settings"
+        android:layout_width="382dp"
+        android:layout_height="117dp"
         android:layout_margin="16dip"
         android:gravity="center"
+        android:text="@string/edit_pet_settings"
+        android:textSize="42sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="30dip"
-        />
-    <EditText
-        android:id="@+id/petnameSetting"
-        android:layout_width="match_parent"
-        android:layout_height="85dp"
-        android:gravity="center"
-        android:textSize="24sp"
-        android:inputType="text"
-        android:hint="@string/enter_pet_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="352dp"
+        android:layout_height="238dp"
+        android:layout_margin="30sp"
+        android:padding="16dp"
+        android:src="@drawable/mouse"
+        tools:layout_editor_absoluteX="29dp"
+        tools:layout_editor_absoluteY="133dp"
         app:layout_constraintTop_toBottomOf="@+id/settingsTitle"
-        />
-    <EditText
-        android:id="@+id/pettypeSetting"
-        android:layout_width="match_parent"
-        android:layout_height="85dp"
-        android:gravity="center"
-        android:textSize="24sp"
-        android:inputType="text"
-        android:hint="@string/enter_pet_type"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+
+    <Button
+        android:id="@+id/redButton"
+        android:layout_width="90dp"
+        android:layout_height="84dp"
+        android:layout_margin="16dp"
+        android:layout_marginTop="144dp"
+        android:text="@string/red"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.054"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/petnameSetting"
-        />
-    <EditText
-        android:id="@+id/petcolorSetting"
-        android:layout_width="match_parent"
-        android:layout_height="85dp"
-        android:gravity="center"
-        android:textSize="24sp"
-        android:inputType="text"
-        android:hint="@string/enter_pet_color"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+    <Button
+        android:id="@+id/blueButton"
+        android:layout_width="90dp"
+        android:layout_height="84dp"
+        android:layout_margin="16dp"
+        android:layout_marginTop="24dp"
+        android:text="@string/blue"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pettypeSetting"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
     <Button
         android:id="@+id/settingButton"
         android:layout_width="match_parent"
         android:layout_height="105dp"
         android:layout_margin="16dp"
+        android:layout_marginTop="208dp"
         android:text="@string/save_settings"
         android:textSize="32sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/petcolorSetting"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
