--- a/app/src/main/res/layout/play_minigame.xml
+++ b/app/src/main/res/layout/play_minigame.xml
@@ -9,11 +9,33 @@
         android:id="@+id/minigameHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Mini Game"
+        android:text="@string/mini_game"
         android:textSize="24sp"
         android:gravity="center"
         android:padding="16dp"
         android:textStyle="bold"
         android:background="#EEEEEE" />
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30sp"
+        android:padding="16dp"
+        android:src="@drawable/mouse" />
+
+    <Button
+        android:id="@+id/settingsbutton"
+        android:layout_width="103dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/imageView2"
+        android:layout_marginStart="20dp"
+
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="-295dp"
+        android:text="@string/edit_pet_settings"
+        android:textSize="11sp" />
 </RelativeLayout>
