--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
         android:id="@+id/adminButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Admin Panel"
+        android:text="@string/admin_panel"
         android:visibility="invisible"
         tools:visibility="visible"
         app:layout_constraintTop_toBottomOf="@id/titleText"
