--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,7 +67,7 @@
         android:layout_marginTop="24dp"/>
 
     <Button
-        android:id="@+id/playButton"
+        android:id="@+id/minigameButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/play_game"
