--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -46,6 +46,19 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <Button
+        android:id="@+id/clearButton"
+        android:layout_width="90dp"
+        android:layout_height="84dp"
+        android:layout_margin="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/clear"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.464"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+    <Button
         android:id="@+id/blueButton"
         android:layout_width="90dp"
         android:layout_height="84dp"
